# lip-sync-detection

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  logging.yaml  main.py  pyproject.toml
data/frames/3dd3d330-3f0e-4799-ae69-1b4616807ed7/: video_meta.json
data/frames/75699f01-e1e2-4b6e-a4f8-49c18163d4fa/: video_meta.json
data/frames/cb929d53-0f0f-4467-9b86-828a49bf3339/: video_meta.json
data/frames/f85a918a-e585-4396-a05d-269b9bf5d1c4/: video_meta.json
data/frames/f8ebb5cf-42ae-4f7c-aff4-ad391e12f7db/: video_meta.json
data/output/75699f01-e1e2-4b6e-a4f8-49c18163d4fa/: mouth_signal.csv  speech_signal.csv
data/output/75699f01-e1e2-4b6e-a4f8-49c18163d4fa/aligned/: aligned_mouth_signal.csv  aligned_speech_signal.csv  alignment_result.json  correlation_report.json  decision.json
data/output/88aec96c-7c48-436b-91dc-5f77ed4a01b4/: mouth_signal.csv
data/output/88aec96c-7c48-436b-91dc-5f77ed4a01b4/aligned/: aligned_mouth_signal.csv  aligned_speech_signal.csv  alignment_result.json  correlation_report.json  decision.json
data/output/8a7140ca-8f6b-4fa4-9c8a-bd977f390bc5/: mouth_signal.csv  speech_signal.csv
data/output/8a7140ca-8f6b-4fa4-9c8a-bd977f390bc5/aligned/: aligned_mouth_signal.csv  alignment_result.json  decision.json  (+1 more)
data/output/f85a918a-e585-4396-a05d-269b9bf5d1c4/: mouth_signal.csv  speech_signal.csv
src/: __init__.py  pipeline.py
src/audio/: __init__.py  audio_energy.py  audio_extractor.py  audio_loader.py  mel_spectrogram.py
src/face/: __init__.py  face_detector.py  face_mesh.py  mouth_features.py
src/speech/: __init__.py  speech_features.py  speech_signal.py  wav2vec_model.py
src/sync/: __init__.py  correlation.py  decision.py  signal_alignment.py  syncnet.py
src/utils/: __init__.py  config.py  file_utils.py  logger.py
src/video/: __init__.py  frame_extractor.py  video_loader.py
(+5 files in other folders)
